force-app/main/default/objects/Reference_Scoring_Detail__c/Reference_Scoring_Detail__c.object-meta.xml
<CustomObject>
    <label>Reference Scoring Detail</label>
    <nameField>
        <label>Reference Scoring Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Scoring Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>