force-app/main/default/objects/Reference_Scoring_Detail__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of item being scored.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>