force-app/main/default/objects/Reference_Scoring_Detail__c/fields/Evaluation_Item__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Item__c</fullName>
    <description>This holds an item to be evaluated</description>
    <label>Evaluation Item</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>