force-app/main/default/objects/Reference_Scoring_Detail__c/fields/Maximum_Points__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Points__c</fullName>
    <description>The maximum number of points an individual item can recieve.</description>
    <label>Maximum Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>