force-app/main/default/objects/Reference_Scoring_Detail__c/fields/Reference_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Reference_Scoring__c</fullName>
    <description>MD to Reference Scoring</description>
    <label>Reference Scoring</label>
    <referenceTo>Reference_Scoring__c</referenceTo>
    <relationshipLabel>Reference Scoring Details</relationshipLabel>
    <relationshipName>Reference_Scoring_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>